--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,8 @@
 [project]
 name = "lsf_runner"
-version = "0.8.1"
+version = "0.9.0"
 description = "Utility to start jobs under IBM LSF"
-authors = [
-    {name = "Anton Golovanov"},
-]
+authors = [{ name = "Anton Golovanov" }]
 requires-python = ">3.7"
 
 [build-system]
